--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,6 +18,7 @@
       },
       "args": [
         "-c=${workspaceFolder}/config.json",
+        "--server_name=webName",
         "--profile=dev",
         "--service_address=127.0.0.0.1:8080",
       ]
